recommendation-service/istio/recommendation-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-service
spec:
  hosts:
  - recommendation-service
  http:
#  - fault:
#      abort:
#        httpStatus: 500
#        percent: 100
  - route: 
    - destination:
        host: recommendation-service
        subset: v1
      weight: 10
    - destination:
        host: recommendation-service
        subset: v2
      weight: 90
